--- a/nacos-provider/src/main/resources/bootstrap.yaml
+++ b/nacos-provider/src/main/resources/bootstrap.yaml
@@ -1,26 +1,26 @@
 spring:
-  # ??????????Nacos????????????
+  # 项目名称，默认情况下Nacos中配置需要和这个保持一致
   application:
     name: provider
   cloud:
     nacos:
-      # ??
+      # 配置
       config:
-        # ??????
-        namespace: #????Nacos??namespace????????????
-        # Nacos??
+        # 开发空间名称
+        namespace: #填写上面Nacos中的namespace（就是开发空间边上那段）
+        # Nacos地址
         server-addr: 127.0.0.1:8848
-        # Nacos???
+        # Nacos用户名
         username: nacos
-        # Nacos????
+        # Nacos用户密码
         password: nacos
-        # Nacos????
+        # Nacos文件后缀
         file-extension: yaml
-      # ??????????????Nacos?????
+      # 发布服务时需要加上这个，不然Nacos无法监听到
       discovery:
-        # ??????
-        namespace: #????Nacos??namespace????????????
-        # Nacos??
+        # 开发空间名称
+        namespace: #填写上面Nacos中的namespace（就是开发空间边上那段）
+        # Nacos地址
         server-addr: 127.0.0.1:8848
 server:
   port: 8080
