--- a/nacos-provider-cluster/pom.xml
+++ b/nacos-provider-cluster/pom.xml
@@ -7,20 +7,11 @@
         <artifactId>springBoot</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>nacos-consumer</artifactId>
+    <description>nacos-provider-cluster</description>
+    <artifactId>nacos-provider-cluster</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>nacos-consumer</name>
-    <description>nacos-consumer</description>
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+
     <dependencies>
-        <!--服务调用-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
