--- a/nacos-provider/pom.xml
+++ b/nacos-provider/pom.xml
@@ -12,7 +12,10 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
