--- a/gateway-example/pom.xml
+++ b/gateway-example/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>springBoot</artifactId>
+        <artifactId>springcloud-nacos-example</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <groupId>com.example</groupId>
