--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>springBoot</artifactId>
+    <artifactId>springcloud-nacos-example</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>springBoot</name>
-    <description>springBoot</description>
+    <name>springcloud-nacos-example</name>
+    <description>springcloud-nacos-example</description>
     <packaging>pom</packaging>
 
     <modules>
