--- a/seata-order-example/pom.xml
+++ b/seata-order-example/pom.xml
@@ -35,20 +35,20 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
-            <exclusions>
-                <!--版本较低，1.3.0，因此排除-->
-                <exclusion>
-                    <artifactId>seata-spring-boot-starter</artifactId>
-                    <groupId>io.seata</groupId>
-                </exclusion>
-            </exclusions>
+            <!--            <exclusions>-->
+            <!--                &lt;!&ndash;版本较低，1.3.0，因此排除&ndash;&gt;-->
+            <!--                <exclusion>-->
+            <!--                    <artifactId>seata-spring-boot-starter</artifactId>-->
+            <!--                    <groupId>io.seata</groupId>-->
+            <!--                </exclusion>-->
+            <!--            </exclusions>-->
         </dependency>
-        <!--seata starter 采用1.4.2版本-->
-        <dependency>
-            <groupId>io.seata</groupId>
-            <artifactId>seata-spring-boot-starter</artifactId>
-            <version>1.4.2</version>
-        </dependency>
+        <!--seata starter 采用1.4.2版本 ,需要在启动类加上@EnableAutoDataSourceProxy才会自动对数据源代理-->
+        <!--        <dependency>-->
+        <!--            <groupId>io.seata</groupId>-->
+        <!--            <artifactId>seata-spring-boot-starter</artifactId>-->
+        <!--            <version>1.4.2</version>-->
+        <!--        </dependency>-->
     </dependencies>
 
     <build>
