--- a/seata-integral-example/pom.xml
+++ b/seata-integral-example/pom.xml
@@ -28,20 +28,20 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
-            <!--            <exclusions>-->
-            <!--                &lt;!&ndash;版本较低，1.3.0，因此排除&ndash;&gt;-->
-            <!--                <exclusion>-->
-            <!--                    <artifactId>seata-spring-boot-starter</artifactId>-->
-            <!--                    <groupId>io.seata</groupId>-->
-            <!--                </exclusion>-->
-            <!--            </exclusions>-->
+            <exclusions>
+                <!--版本较低，1.3.0，因此排除-->
+                <exclusion>
+                    <artifactId>seata-spring-boot-starter</artifactId>
+                    <groupId>io.seata</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--seata starter 采用1.4.2版本-->
-        <!--        <dependency>-->
-        <!--            <groupId>io.seata</groupId>-->
-        <!--            <artifactId>seata-spring-boot-starter</artifactId>-->
-        <!--            <version>1.4.2</version>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-spring-boot-starter</artifactId>
+            <version>1.4.2</version>
+        </dependency>
     </dependencies>
 
     <build>
