--- a/nacos-provider-cluster/src/main/resources/bootstrap.yaml
+++ b/nacos-provider-cluster/src/main/resources/bootstrap.yaml
@@ -8,12 +8,11 @@ spring:
       config:
         # Nacos地址
         server-addr: 127.0.0.1:8848
-        namespace: 744c4b3f-0415-4414-9214-84c032dc3a7a  # 命名空间，填ID
+        namespace: dev  # 命名空间，填ID
       # 发布服务时需要加上这个，不然Nacos无法监听到
       discovery:
         # Nacos地址
         server-addr: 127.0.0.1:8848
-        cluster-name: SZ
-        namespace: 744c4b3f-0415-4414-9214-84c032dc3a7a  # 命名空间，填ID
+        namespace: dev  # 命名空间，填ID
 server:
   port: 8082
