--- a/seata-integral-example/pom.xml
+++ b/seata-integral-example/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>integral</artifactId>
+    <artifactId>seata-integral-example</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
