--- a/seata-order-example/src/main/resources/bootstrap.yaml
+++ b/seata-order-example/src/main/resources/bootstrap.yaml
@@ -6,17 +6,19 @@ spring:
   application:
     name: seata-order
     # mysql 属性配置
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seata?characterEncoding=utf8&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
-    username: root
-    password: 123456
+  #  datasource:
+  #    driver-class-name: com.mysql.cj.jdbc.Driver
+  #    url: jdbc:mysql://localhost:3306/seata?characterEncoding=utf8&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+  #    username: root
+  #    password: 123456
   cloud:
     nacos:
       # 配置
       config:
         # Nacos地址
         server-addr: 127.0.0.1:8848
+        # 对应nacos的dataId的后缀：seata-order.yaml
+        file-extension: yaml
         namespace: dev  # 命名空间，填ID
       # 发布服务时需要加上这个，不然Nacos无法监听到
       discovery:
