--- a/sharding-jdbc-example/pom.xml
+++ b/sharding-jdbc-example/pom.xml
@@ -44,8 +44,13 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.0.5</version>
+            <version>3.3.2</version>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.baomidou</groupId>-->
+        <!--            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>-->
+        <!--            <version>3.5.1</version>-->
+        <!--        </dependency>-->
 
     </dependencies>
 
