--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>webscoket-example</module>
         <module>elasticsearch-example</module>
         <module>sharding-jdbc-example</module>
+        <module>mybatis-example</module>
     </modules>
 
     <properties>
