--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <fastJson.version>1.2.75</fastJson.version>
         <guava.version>30.1.1-jre</guava.version>
         <lombok.version>1.18.22</lombok.version>
+        <hutool.version>5.7.12</hutool.version>
     </properties>
 
     <dependencyManagement>
@@ -112,7 +113,11 @@
             <version>${guava.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
