--- a/mybatis-example/src/main/resources/bootstrap.yaml
+++ b/mybatis-example/src/main/resources/bootstrap.yaml
@@ -5,10 +5,35 @@ spring:
 
   # mysql 属性配置
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seata?characterEncoding=utf8&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
-    username: root
-    password: 123456
+    #    driver-class-name: com.mysql.cj.jdbc.Driver
+    #    url: jdbc:mysql://localhost:3306/seata?characterEncoding=utf8&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+    #    username: root
+    #    password: 123456
+
+    dynamic:
+      #设置默认的数据源或者数据源组,默认值即为master
+      primary: master
+      #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
+      strict: false
+      datasource:
+        master:
+          url: jdbc:mysql://127.0.0.1:3306/cloud?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF8&useSSL=false
+          username: root
+          password: 123456
+          initial-size: 1
+          min-idle: 1
+          max-active: 20
+          test-on-borrow: true
+          driver-class-name: com.mysql.cj.jdbc.Driver
+        slave:
+          url: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF8&useSSL=false
+          username: root
+          password: 123456
+          initial-size: 1
+          min-idle: 1
+          max-active: 20
+          test-on-borrow: true
+          driver-class-name: com.mysql.cj.jdbc.Driver
 
   cloud:
     nacos:
