--- a/mybatis-example/pom.xml
+++ b/mybatis-example/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.3.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
