--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>elasticsearch-example</module>
         <module>sharding-jdbc-example</module>
         <module>mybatis-example</module>
+        <module>base-common</module>
     </modules>
 
     <properties>
@@ -64,6 +65,10 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
