--- a/mybatis-example/pom.xml
+++ b/mybatis-example/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.3.2</version>
+            <version>3.4.2</version>
         </dependency>
         <!--封装了hibernate-validator- -->
         <dependency>
@@ -49,11 +49,11 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.3.0.Final</version>
         </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
-            <version>3.5.0</version>
-        </dependency>
+        <!--        <dependency>
+                    <groupId>com.baomidou</groupId>
+                    <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                    <version>3.5.0</version>
+                </dependency>-->
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>base-common</artifactId>
