case when update

--- a/mybatis-example/src/main/resources/bootstrap.yaml
+++ b/mybatis-example/src/main/resources/bootstrap.yaml
@@ -6,7 +6,7 @@ spring:
   # mysql 属性配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/cloud?allowMultiQueries=true&characterEncoding=utf8&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
     username: root
     password: 123456
 
