--- a/sharding-jdbc-example/pom.xml
+++ b/sharding-jdbc-example/pom.xml
@@ -51,7 +51,15 @@
         <!--            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>-->
         <!--            <version>3.5.1</version>-->
         <!--        </dependency>-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
