--- a/file-upload/src/main/resources/application.yaml
+++ b/file-upload/src/main/resources/application.yaml
@@ -12,8 +12,8 @@ spring:
 
   servlet:
     multipart:
-      max-file-size: 10000Mb
-      max-request-size: 100000Mb
+      max-file-size: 10000
+      max-request-size: 100000
 
 server:
   port: 9090
