remove jasypt and update slice

--- a/file-upload/pom.xml
+++ b/file-upload/pom.xml
@@ -20,10 +20,10 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <!--密码加密-->
-        <dependency>
+<!--        <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot-starter</artifactId>
             <version>3.0.4</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
