--- a/base-common/pom.xml
+++ b/base-common/pom.xml
@@ -46,6 +46,11 @@
             <version>4.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
